--- a/TEST-2/style.css
+++ b/TEST-2/style.css
@@ -82,6 +82,10 @@ footer {
     margin: 20px auto;
   }
 
+  .step-box:last-child {
+    margin-right: auto;
+  }
+
   .step-img1 {
     height: 150px;
   }
